Updated portfolio site

--- a/src/app/Components/experience/experience.component.html
+++ b/src/app/Components/experience/experience.component.html
@@ -39,7 +39,7 @@
     <div class="exp-company-info">
         <i class="fas fa-building"></i>
         <h3>Zestorm Technologies Pvt. Ltd.</h3>
-        <span>Web Developer | Nov 2021 – Present</span>
+        <span>Senior Web Developer | Nov 2021 – Present</span>
     </div>
 
     <div class="exp-cards-container">
