--- a/src/app/Components/experience/experience.component.html
+++ b/src/app/Components/experience/experience.component.html
@@ -1,10 +1,10 @@
 <h1 class="section-title text-center mb-5" style="padding-top: 100px;">My Experience</h1>
 
-<!-- <section class="experience-section card" data-aos="fade-up">
+<section class="experience-section card" data-aos="fade-up">
     <div class="exp-company-info">
         <i class="fas fa-building"></i>
         <h3>Inductotherm Group Pune Pvt. Ltd.</h3>
-        <span>Software Engineer | Apr 2025 – Present</span>
+        <span>Software Engineer | Jul 2025 – Present</span>
     </div>
 
     <div class="exp-cards-container">
@@ -33,13 +33,13 @@
             <p>Ensured secure user interactions through robust validations and role-based access control.</p>
         </div>
     </div>
-</section> -->
+</section>
 
 <section class="experience-section card mt-4" data-aos="fade-up">
     <div class="exp-company-info">
         <i class="fas fa-building"></i>
         <h3>Zestorm Technologies Pvt. Ltd.</h3>
-        <span>Senior Web Developer | Nov 2021 – Present</span>
+        <span>Senior Web Developer | Nov 2021 – Jun 2025</span>
     </div>
 
     <div class="exp-cards-container">
