--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -60,7 +60,7 @@
             <div class="hero-text animate__animated animate__fadeInDown">
                 <h4 class="mb-3 mt-2">Hello, It's Me</h4>
                 <h1>Shantanu Kanade</h1>
-                <h3 class="mb-3">And I'm a <span class="highlight">Senior Web Developer</span></h3>
+                <h3 class="mb-3">And I'm a <span class="highlight">Software Engineer</span></h3>
                 <h5 class="mb-5"> Welcome to SK'S world !</h5>
 
                 <div class="socials" aria-label="Contact Links">
